2008-11-03    <neal@bcn.boulder.co.us>

	* electionaudits/tests.py (SimpleTest.test_reports): 
	Add some unit tests: run via `manage.py test electionaudits`

	* setup.py: 
	Generate sdist from original trunk rather than a different bzr branch,
	to avoid bzr munging of mod times.
	See https://bugs.edge.launchpad.net/bzr/+bug/245170
	Drop use of find_packages, which was bringing in unneeded files

	* README (FAQ): 
	Begin an FAQ
	
2008-11-02    <neal@bcn.boulder.co.us>

	* electionaudits/varsize.py (plotprobs): 
	Fix hidden dependency: Only import pylab when necessary
	drop unused import matplotlib.numerix

	* electionaudits/views.py (stats): 
	make default batch size distribution more like boulder county 2008

	* root/settings.py: 
	Configure CsrfMiddleware to avoid CSRF attacks with POSTs

2008-11-01    <neal@bcn.boulder.co.us>

	* README (C): 
	Improve installation and use instructions in README
	Version 0.9.dev-r47

2008-10-30    <neal@bcn.boulder.co.us>

	* electionaudits/views.py (parse): 
	New /parse/ form to parse incoming directory with -s -c
	
	* electionaudits/templates/electionaudits/stats.html: 
	Call Ad-Hoc Contest Statistics a "Calculator" and fix title
	
2008-10-30    <neal@bcn.boulder.co.us>
	
	* README (C): 
	Document new -c and directory options in README

2008-10-29    <neal@bcn.boulder.co.us>

	* electionaudits/parsers.py (parse): 
	if a directory arg is given to parse, parse each file in the directory
	implement --chronological option and change -c to be that, not --contest
	
2008-10-23    <neal@bcn.boulder.co.us>

	* README (Features): 
	Release Version 0.8
	Highlight the features of ElectionAudits
	Update ToDo
	
2008-10-22    <neal@bcn.boulder.co.us>

	* electionaudits/views.py (StatsForm): 
	New ad-hoc /stats/ form: statistics for a given margin, confidence

	* electionaudits/varsize.py (rule_of_thumb): 
	Call rule_of_thumb from paper() for consistency
	Bug: needed "s" parameter to bmin() call for SAFE
	