@@ -97,32 +97,50 @@ contribute.
 Requirements
 ============
 
+ElectionAudits has been tested on Ubuntu Linux and Windows, and should
+run fine on Mac OS X and others.
+
+It requires these other components:
+
  * Python (developed with python version 2.5, but should work with 2.3)
- * lxml (xml parsing package, e.g. python-lxml in Ubuntu or easy_install lxml)
+ * lxml (xml parsing package)
  * Django 1.0
- * sqlite3
+ * sqlite3 lightweight database
 
 Helpful but optional Django apps used in settings.DEBUG mode:
 
- * lukeplant_me_uk.django.validator for automatic xhtml validation
- * django_extensions - for ease in development and documentation
- * debug-toolbar: http://github.com/robhudson/django-debug-toolbar/tree/master
+ * lukeplant_me_uk.django.validator, for automatic xhtml validation
+ * django_extensions, for ease in development and documentation
+ * debug-toolbar, http://github.com/robhudson/django-debug-toolbar/tree/master
 
-If you want to run in DEBUG mode and don't have them, just comment
+If you want to run in DEBUG mode and don't have these, just comment
 them out of root/settings_debug.py and electionaudits/urls.py
-
-It has been tested on Ubuntu Linux and Windows, and should run fine
-on Mac OS X and others.
 
 
 Installation
 ============
 
-First install a release of python 2.5 (e.g. 2.5.2, though 2.6 might
-work) If you have a recent version of Linux, e.g. any Ubuntu release
-since "feisty" in 2006, you probably have it already.
+Ubuntu Linux
+------------
+On Linux, installation is easy.
 
-For Windows, see http://www.python.org/download/
+On the Intrepid release, 8.10, you can get all the prerequisites this way:
+
+  $ sudo apt-get install python-lxml libsqlite3-0 python-django
+
+or install the same packages via the Synaptic Package Manager GUI.
+
+For earlier Ubuntu releases, you'll need to get Django 1.0 from
+ http://www.djangoproject.com/download/
+
+
+Windows XP, and maybe Vista
+---------------------------
+
+First install a release of python 2.5 (e.g. 2.5.2, though 2.6 might
+work):
+
+ http://www.python.org/download/
 
 Next install the official version of Django 1.0 using the simple steps
 described at http://www.djangoproject.com/download/
@@ -132,29 +150,36 @@ unpack the .tar.gz file, or bsdtar
 (http://gnuwin32.sourceforge.net/packages/bsdtar.htm) for more
 straightforward command-line use.
 
-Then install lxml and sqlite3.
+Then install lxml via setuptools:
 
- On Ubuntu Linux:
-
-  $ sudo apt-get install python-lxml libsqlite3-0
-
- On Windows, first install setuptools:
+Get and run this setuptools installer:
 
   http://pypi.python.org/packages/2.5/s/setuptools/setuptools-0.6c9.win32-py2.5.exe
 
-  You can then just run this:
+You can then just run this:
   C:> easy-install lxml
 
-  Or use the MS Windows Installer for lxml that matches your version of
-  python at http://pypi.python.org/pypi/lxml/2.1.2, e.g.
+Or use the MS Windows Installer for lxml that matches your version of
+python at http://pypi.python.org/pypi/lxml/2.1.2, e.g.
 
    http://pypi.python.org/packages/2.5/l/lxml/lxml-2.1.2.win32-py2.5.exe
 
-  Finally, get the sqlite3 library DLL from
+Finally, get the sqlite3 library DLL from
    http://www.sqlite.org/download.html
-   e.g. http://www.sqlite.org/sqlitedll-3_6_4.zip
-  unzip it and put the .dll file with your other DLLs in
-  your default System directory, e.g. C:\WINDOWS\system32
+
+e.g. http://www.sqlite.org/sqlitedll-3_6_4.zip
+
+Unzip it and put the .dll file with your other DLLs in
+your default System directory, e.g. C:\WINDOWS\system32
+
+
+Mac OS X
+--------
+
+This should be pretty easy if you search a bit, but we don't have
+specific instructions.  Let us know if you want help, or if you can
+share advice.
+
 
 Initialization
 ==============
@@ -318,7 +343,8 @@ Thanks to these contributors:
 The auditing experts led by Mark Halvorson and John McCarthy at Verified Voting
 
 Users with very helpful feedback:
- Crystal Christman, Mark Lindeman, Hillary Hall, Aaron D. Gerber,
+ Crystal Christman, Mark Lindeman, Hillary Hall, Aaron D. Gerber.
+
 
 FAQ - Frequently Asked Questions
 ================================
