@@ -1,3 +1,9 @@
+2008-11-05    <neal@bcn.boulder.co.us>
+
+	* electionaudits/templates/electionaudits/report.html: 
+	Clarify statistics more
+	Improve README
+	
 2008-11-03    <neal@bcn.boulder.co.us>
 
 	* electionaudits/tests.py (SimpleTest.test_reports): 
